--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -464,7 +464,7 @@ body>footer {
   //Site footer
   padding:10px 5px;
   position: relative;
-  background-color: rgb(93, 5, 95);
+  background-color: rgba(0,0,0,0.8);
   
   ul {
     list-style-type: none;
