--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -19,20 +19,9 @@
   }*/
 }
 
-/*body>footer {
-    background-color: #A0148E;
-    color: #fff;
-    min-height: auto;
-
-    a {
-      color: #fff;
-    }
-
-    li {
-      margin-right: 1.375rem;
-      margin-left: 0 !important;
-    }
-}*/
+body>footer {
+    background-color: rgb(93, 5, 95);
+}
 
 #top-headers {
 
