--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -482,16 +482,16 @@ body>footer {
     font-size: 25px;
   }
   li {
-    color: #BBBBBB;
+    color: #bbbbbb;
   }
   a {
-    color: #BBBBBB;
+    color: #bbbbbb;
     margin-top:0;
     padding: 0;
     display: inline;
     &:hover {
       text-decoration: none;
-      color: #3824a5;
+      color: #ffffff;
       margin-top:0;
       padding: 0;
       display: inline;
@@ -500,7 +500,7 @@ body>footer {
   .myfooter {
 
     .footer-section {
-      color: #FFFFFF;
+      color: #ffffff;
       text-align: center;
     }
     .inline_mar-right {
@@ -528,17 +528,17 @@ body>footer {
       }
     }
     .footer_link_cont {
-      display:inline-block;
-      vertical-align:top;
-      margin:20px;
-      text-align:left;
+      display: inline-block;
+      vertical-align: top;
+      margin: 20px;
+      text-align: left;
 
       .links_show {
         //change as per requirement on addition on more links in future
         max-height: 600px;
       }
       .show_foot_links {
-        color: #666666;
+        color: #777777;
         cursor: pointer;
 
         &:hover {
@@ -550,7 +550,7 @@ body>footer {
   }
 }
 
-.coll-arrows{
+.coll-arrows {
     cursor:pointer;
     display: block;
     padding: 0.5rem;
