--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/repository.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/repository.html
@@ -16,9 +16,8 @@
 
 {% block body_content %}
 
-	<div class="repository-title large-3 large-offset-2 columns">{% trans "Repository" %}
-		</div>
-	<div class="repository-desc large-7 columns">{% trans "Digital resource grouped in multiple ways" %}</div>
+	<div class="repository-title medium-3 medium-offset-2 large-3 large-offset-2 columns">{% trans "Repository" %}</div>
+	<div class="repository-desc medium-6 large-7 columns">{% trans "Digital resource grouped in multiple ways" %}</div>
 	
 	<!-- <ul class="inline-list card-holder"> -->
 	<div class="app-card-wrapper">
