--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4137,6 +4137,9 @@ course-title{
     &.forthcoming{
       background-color: #F2910D;
     }
+    &.upcoming{
+      background-color: #F2910D;
+    }
 
     &.completed{
       background-color: #4d4d4d;
