--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_course_structure.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_course_structure.html
@@ -18,7 +18,7 @@
       <a href="{% url 'mis_course_detail' group_name_tag app_id app_set_id cnode %}"><h3><u>Go back to Course '{{cnode.name}}' </u></h3></a>
     {% else %}
       {% if 'BaseCourseGroup' in cnode.member_of_names_list %}
-        <a href="{% url 'course_content' group_name_tag %}"><h3><u>Go back to Course '{{cnode.name}}' </h3></u></a>
+        <a href="{% url 'course_content' cnode.name %}"><h3><u>Go back to Course '{{cnode.name}}' </h3></u></a>
       {% else %}
         <a href="{% url 'course_detail' group_name_tag cnode %}"><h3><u>Go back to Course '{{cnode.name}}' </h3></u></a>
       {% endif %}
