--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -302,13 +302,19 @@
                 </video>
               <br>
                 {% if node.created_by == request.user.id or is_gstaff %}
-                  <a class="button change-thumbnail">Add/Change thumbnail</a>
-                  <div class="change-thumbnail-area" style="display:none">
-                    
-                    {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
+                  <dl class="accordion" data-accordion>
+                      <dd class="accordion-navigation" data-options="deep_linking:true">
+                            <a href="#panel1" style="">Change Thumbnail</a>
+                            <div id="panel1" class="content">
+                              {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
+                              {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id="video-area" group_id=group_id parent_node=node.pk %}                
+                            </div>
+                      
+                      </dd>
+                  </dl>
 
-                    {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id="video-area" group_id=group_id parent_node=node.pk %}                
-                  </div>
+
+                 
                 {% endif %}
               {% elif 'audio' in node.if_file.mime_type %}
                 <audio src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" controls loop>
