--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
@@ -1,14 +1,22 @@
-  
-  {% if grel_dict %}
-      Existing Thumbnail<br>
-        <img  src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.thumbnail.relurl}}"><br><br><br><br>
-{% endif %}
-<canvas id="canvas" width="50px" height="50px" style="display:block;"></canvas>
-<div id="screenShots"></div>
-<a class="button" id="snap" onclick="startScreenshot()" value="">take snapshot</a>
-<a class="button" style="display:none" id="save-snap" onclick="saveScreenshot()" value="">save snapshot</a>
-
-
+<div class="large-12 columns">
+  <div class="large-12 columns row">
+    {% if grel_dict %}
+        <div class="large-6 columns">
+          <label>Existing Thumbnail</label>
+          <img  src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.thumbnail.relurl}}">
+        </div>
+    {% endif %}
+        <div class="large-6 columns">
+          <label>captured Thumbnail</label>
+          <canvas id="canvas" width="50px" height="50px" style="display:block;"></canvas>
+          <div id="screenShots"></div>
+        </div>
+</div>  
+  </div>
+       <div class="large-12 columns">
+          <a class="button" id="snap" onclick="startScreenshot()" value="">take snapshot</a>
+          <a class="button" style="display:none" id="save-snap" onclick="saveScreenshot()" value="">save snapshot</a>
+       </div>
 
 <script type="text/javascript">
 var video_obj = document.getElementById("{{video_id}}");
